--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<ul>
 			<li><a href="#basketball">Basketball</a></li>
 			<li><a href="PhotoGallery.html">Photo Gallery</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
 	<div id="time"></div>
